// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OffenceSearchComponent search should show no results message no offences found 1`] = `
<offence-search-test
  noResult="false"
>
  <form
    class="ng-untouched ng-pristine ng-valid"
    novalidate=""
  >
    <pdk-form-field
      label="test"
    >
      <pdk-form-group
        class="pdk-form-group"
      >
        <label
          class="govuk-label"
          for="offence-search-6"
        >
           test 
        </label>
        <offence-search
          class="ng-untouched ng-pristine ng-valid"
          name="offence"
          ngmodel=""
        >
          <div
            class="offence-search"
          >
            <pdk-autosuggest
              highlightcolor="blue"
              name="id"
            >
              <pdk-interaction-container>
                <div>
                  <div
                    class="pdk-autosuggest"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-controls="pdk-autosuggest__suggestions-container-GENERATED_ID-listbox"
                      aria-describedby="pdk-autosuggest__instructions-GENERATED_ID"
                      aria-expanded="false"
                      autocomplete="off"
                      class="pdk-autosuggest__input ng-untouched ng-pristine ng-valid govuk-input"
                      id="offence-search-6"
                      role="combobox"
                      type="text"
                    />
                    <span
                      class="govuk-visually-hidden"
                      id="pdk-autosuggest__instructions-GENERATED_ID"
                      pdk-visually-hidden=""
                    >
                       When autocomplete results are available, use the up and down arrows to review and Enter to select. Touch device users, explore options with swipe gestures. 
                    </span>
                    <span
                      aria-live="polite"
                      class="govuk-visually-hidden"
                      pdk-visually-hidden=""
                      role="status"
                    >
                    </span>
                    <div
                      class="pdk-autosuggest__suggestions-container"
                      id="pdk-autosuggest__suggestions-container-GENERATED_ID"
                    >
                    </div>
                  </div>
                </div>
              </pdk-interaction-container>
            </pdk-autosuggest>
            <div
              class="noResult"
            >
              No results found
            </div>
          </div>
        </offence-search>
      </pdk-form-group>
    </pdk-form-field>
  </form>
</offence-search-test>
`;

exports[`OffenceSearchComponent should compile correctly 1`] = `
<offence-search-test
  noResult="false"
>
  <form
    class="ng-untouched ng-pristine ng-valid"
    novalidate=""
  >
    <pdk-form-field
      label="test"
    >
      <pdk-form-group
        class="pdk-form-group"
      >
        <label
          class="govuk-label"
          for="offence-search-1"
        >
           test 
        </label>
        <offence-search
          class="ng-untouched ng-pristine ng-valid"
          name="offence"
          ngmodel=""
        >
          <div
            class="offence-search"
          >
            <pdk-autosuggest
              highlightcolor="blue"
              name="id"
            >
              <pdk-interaction-container>
                <div>
                  <div
                    class="pdk-autosuggest"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-controls="pdk-autosuggest__suggestions-container-GENERATED_ID-listbox"
                      aria-describedby="pdk-autosuggest__instructions-GENERATED_ID"
                      aria-expanded="false"
                      autocomplete="off"
                      class="pdk-autosuggest__input ng-untouched ng-pristine ng-valid govuk-input"
                      id="offence-search-1"
                      role="combobox"
                      type="text"
                    />
                    <span
                      class="govuk-visually-hidden"
                      id="pdk-autosuggest__instructions-GENERATED_ID"
                      pdk-visually-hidden=""
                    >
                       When autocomplete results are available, use the up and down arrows to review and Enter to select. Touch device users, explore options with swipe gestures. 
                    </span>
                    <span
                      aria-live="polite"
                      class="govuk-visually-hidden"
                      pdk-visually-hidden=""
                      role="status"
                    >
                    </span>
                    <div
                      class="pdk-autosuggest__suggestions-container"
                      id="pdk-autosuggest__suggestions-container-GENERATED_ID"
                    >
                    </div>
                  </div>
                </div>
              </pdk-interaction-container>
            </pdk-autosuggest>
          </div>
        </offence-search>
      </pdk-form-group>
    </pdk-form-field>
  </form>
</offence-search-test>
`;

exports[`OffenceSearchComponent should select a charge 1`] = `
<offence-search-test
  noResult="false"
>
  <form
    class="ng-untouched ng-valid ng-dirty"
    novalidate=""
  >
    <pdk-form-field
      label="test"
    >
      <pdk-form-group
        class="pdk-form-group"
      >
        <label
          class="govuk-label"
          for="offence-search-2"
        >
           test 
        </label>
        <offence-search
          class="ng-untouched ng-valid ng-dirty"
          name="offence"
          ngmodel=""
        >
          <div
            class="offence-search"
          >
            <pdk-autosuggest
              highlightcolor="blue"
              name="id"
            >
              <pdk-interaction-container>
                <div>
                  <div
                    class="pdk-autosuggest"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-controls="pdk-autosuggest__suggestions-container-GENERATED_ID-listbox"
                      aria-describedby="pdk-autosuggest__instructions-GENERATED_ID"
                      aria-expanded="false"
                      autocomplete="off"
                      class="pdk-autosuggest__input ng-untouched ng-pristine ng-valid govuk-input"
                      id="offence-search-2"
                      role="combobox"
                      type="text"
                    />
                    <span
                      class="govuk-visually-hidden"
                      id="pdk-autosuggest__instructions-GENERATED_ID"
                      pdk-visually-hidden=""
                    >
                       When autocomplete results are available, use the up and down arrows to review and Enter to select. Touch device users, explore options with swipe gestures. 
                    </span>
                    <span
                      aria-live="polite"
                      class="govuk-visually-hidden"
                      pdk-visually-hidden=""
                      role="status"
                    >
                    </span>
                    <div
                      class="pdk-autosuggest__suggestions-container"
                      id="pdk-autosuggest__suggestions-container-GENERATED_ID"
                    >
                    </div>
                  </div>
                </div>
              </pdk-interaction-container>
            </pdk-autosuggest>
          </div>
        </offence-search>
      </pdk-form-group>
    </pdk-form-field>
  </form>
</offence-search-test>
`;
